--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
                         <li><strong>Codespaces:</strong> Compute starting at $0.18/hour, storage at $0.07/GB/month</li>
                         <li><strong>Free Plan:</strong> GitHub Actions cannot exceed included minutes (hard cap)</li>
                     </ul>
+                    Disclaimer: Plan pricing can change at any time, this information may not be accurate, do your own due diligence. This is not an official Github calculator. Github is a registered trademark of it's respective trademark holders. 
                 </div>
             </div>
         </div>
